# stereo_ROS2

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.xml  test_coordinate_transform  test_coordinate_transform.cpp
config/: stereo_camera_params.yaml
include/: stereo_camera.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/stereo_camera_cpp/include/: stereo_camera.h
install/stereo_camera_cpp/lib/stereo_camera_cpp/: stereo_camera_demo  stereo_camera_ros2_node
install/stereo_camera_cpp/share/ament_index/resource_index/package_run_dependencies/: stereo_camera_cpp
install/stereo_camera_cpp/share/stereo_camera_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/stereo_camera_cpp/share/stereo_camera_cpp/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  stereo_camera_cppConfig.cmake
launch/: stereo_camera.launch.py  stereo_with_display.launch.py
log/: latest_build
scripts/: keep_window_open.sh  run_with_display.sh  setup_env.sh  test_display.sh  test_system.sh
src/: main.cpp  stereo_camera.cpp  stereo_camera_ros2_node.cpp  stereo_display_node.cpp
srv/: GetDistance.srv
