<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeName="packageFormat3"?>
<package format="3">
  <name>stereo_camera_cpp</name>
  <version>1.0.0</version>
  <description>C++ implementation of stereo camera distance measurement for ROS2 Humble</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/your_username/stereo_camera_cpp</url>
  <url type="bugtracker">https://github.com/your_username/stereo_camera_cpp/issues</url>
  <url type="repository">https://github.com/your_username/stereo_camera_cpp</url>
  
  <author email="your_email@example.com">Your Name</author>
  
  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <!-- 构建依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  
  <!-- 执行依赖 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>